Move admin and home html files to the client side. Change the original home page to the current one.

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,2 +1,6 @@
-<h2>Home</h2>
-<p>{{ text }}</p>
+<html>
+
+<h1>Digital Display Garden</h1>
+<a href="../admin/admin.html">Administration</a>
+
+</html>
