Add login page for the component

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,12 @@
 <html>
 
 <h1>Digital Display Garden</h1>
-<a href="../admin/admin.html">Administration</a>
+<a href="../admin/admin.component.html">Administration</a>
 
 </html>
+
+<style>
+a {
+    font-size:20px;
+}
+</style>
