Change "Adminstration" component to "QR code"

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,12 +1,8 @@
 <html>
 
 <h1>Digital Display Garden</h1>
-<a href="../admin/admin.component.html">Administration</a>
+<br/><br/><br/>
+<h5>Scan your QR code</h5>
 
 </html>
 
-<style>
-a {
-    font-size:20px;
-}
-</style>
