Allow file uploads to server
The CSV file can now be uploaded to the server.
The CSV file is stored in a string within the import-csv POST in Server.java.
This CSV information now needs to be pulled apart, stored into Plant objects
and those plant objects loaded into the database.

--- a/client/src/app/plants/plant-list.component.html
+++ b/client/src/app/plants/plant-list.component.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 <input type="file" (change)="fileChange($event)" placeholder="Upload file">
+
+<h1>Plants</h1>
+
+<li *ngFor="let plant of plants" class="list-group-item">
+    {{plant.plantName}}
+</li>
+
 </body>
 </html>
