Remove users from project and edit home page
The users route, component, html and directory have been removed.

 Addresses issue #1, #2

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<h2>Home</h2>
-
 <!-- One-way binding and Read-only of 'text' property from component -->
-<p>{{ text }}</p>
+<h1>{{greeting}}</h1>
+
 
