Add properties to Plant.ts and rename plant files
Properties have been added to the Plant.ts file to save data when imported from the server.
Some file names have been changed to help with readability.

Addresses issue #1

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -9,9 +9,7 @@
 
 <h1>Plants</h1>
 
-<li *ngFor="let plant of plants" class="list-group-item">
-    {{plant.plantName}}
-</li>
+<p>{{plant.id}}</p>
 
 </body>
 </html>
