--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -5,11 +5,17 @@
     <title>about</title>
 </head>
 <body>
-<input type="file" (change)="fileChange($event)" placeholder="Upload file">
 
-<h1>Plants</h1>
+    <input type="file" (change)="fileChange($event)" placeholder="Upload file">
 
-<p>{{plant.id}}</p>
+    <plant-detail [plant]="selectedPlant"></plant-detail>
+
+    <h2>Plants</h2>
+    <ul class="plants">
+        <li *ngFor="let plant of plants" [class.selected]="plant === selectedPlant" (click)="onSelect(plant)">
+            <span class="badge">{{plant.name}}</span>
+        </li>
+    </ul>
 
 </body>
 </html>
