--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -7,6 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" [routerLink]="['/']">Angular Spark Demo</a>
         </div>
@@ -16,6 +17,7 @@
                 <li><a [routerLink]="['/kittens']">Kittens</a></li>
                 <li><a [routerLink]="['/users']">Users</a></li>
                 <li><a [routerLink]="['/plants']">Plants</a></li>
+                <li><a [routerLink]="['/registration']">Registration</a></li>
             </ul>
         </div>
     </div>
