--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -8,6 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" [routerLink]="['/']">Angular Spark Demo</a>
         </div>
@@ -18,6 +19,7 @@
                 <li><a [routerLink]="['/users']">Users</a></li>
                 <li><a [routerLink]="['/plants']">Plants</a></li>
                 <li><a [routerLink]="['/registration']">Registration</a></li>
+                <li><a [routerLink]="['/login']">Login</a></li>
             </ul>
         </div>
     </div>
