Refactor entire clientside plants directory
The Plant directory has been refactored to allow for data to be shown.
For some reason, buildling the project from the bottom up (From a clean lab)
does not work and results in a 3-4 hour bug hunt that ultimately failed.

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -14,6 +14,7 @@
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/']">Home</a></li>
                 <li><a [routerLink]="['/plants']">Plants</a></li>
+                <li><a [routerLink]="['/users']">Users</a></li>
             </ul>
         </div>
     </div>
