--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -13,8 +13,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/']">Home</a></li>
-                <li><a [routerLink]="['/plants']">Plants</a></li>
-                <li><a [routerLink]="['/users']">Users</a></li>
+                <li><a [routerLink]="['/plants']">Administration</a></li>
             </ul>
         </div>
     </div>
